# LFG-loan-approval

./: README.md  docker-compose.yml  manage.py  pyproject.toml  setup.cfg
.github/workflows/: pipeline.yaml
docker/: nginx.conf
loans/: settings.py
loans/tests/: test_admin_page.py
